# fleet-midi-harmonizer

./: Cargo.toml  README.md
examples/: tutorial.rs
lib/go/: go.mod
src/: cost.rs  harmony.rs  lib.rs  progression.rs  rules.rs  ternary.rs  voice.rs
